--- a/loansource-shakyo/src/main/resources/application.properties
+++ b/loansource-shakyo/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# この設定はモード切替を制御する
+spring.profiles.active=@spring.profile.activated@
 
+# この設定はメッセージ生成の割合を増やしたり減らしたりする。(1000 = 1s)
+# spring.cloud.stream.poller.fixed-delay=1000
+
+# この設定は、コード内の関数メソッドが複数ある場合に、呼び出されるかどうかを制御できる
+# spring.cloud.function.definition=supplyLoan
+
+# 自動生成されたバインディングに分かりやすい名前をつける
+spring.cloud.stream.function.bindings.supplyLoan-out-0=output
