--- a/loansource-shakyo/pom.xml
+++ b/loansource-shakyo/pom.xml
@@ -63,4 +63,37 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>kafka</id>
+			<properties>
+				<spring.profile.activated>kafka</spring.profile.activated>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>rabbit</id>
+			<properties>
+				<spring.profile.activated>rabbit</spring.profile.activated>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
+
 </project>
